# ml_api

./: .dockerignore  .env  Dockerfile  docker-compose.yml  fly.toml  pyproject.toml  startup.sh
bash_scripts/: deploy_app.sh  push_to_dockerhub.sh  run_docker.sh
ml_api/: inference_api.py  model_manager.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_ml_api.py
